--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,7 @@ body {
   color: #00b1ff;
   position: relative;
   background-color: #1e1b22;
+  width: 100%;
 }
 header {
   background-color: #177ba0;
@@ -80,11 +81,34 @@ a:hover {
 a:active {
   text-decoration: none;
 }
-
+#modal {
+  width: 90%;
+  height: 180px;
+  background-color: #38323f;
+  position: fixed;
+  left: 5%;
+  top: 7%;
+  z-index: 1;
+  display: none;
+}
+.closeModal {
+  float: right;
+  margin: 5px;
+  font-size: 1.3em;
+}
 table {
   background-color: #302d34;
   border: none;
   width: 100%;
+}
+.padder {
+  background-color: red;
+  margin: 4px;
+}
+td {
+  height: 40px;
+  text-align: left;
+  border-bottom: 2px solid #1e1b22;
 }
 .fader {
   opacity: 0.2;
